--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -o ./app/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -o ./app/tailwind.css --watch"
+    "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
+    "test": "jest"
   },
   "dependencies": {
+    "@octokit/core": "^3.6.0",
     "@remix-run/react": "^1.3.1",
     "@remix-run/serve": "^1.3.1",
     "react": "^17.0.2",
@@ -22,11 +24,17 @@
   "devDependencies": {
     "@remix-run/dev": "^1.3.1",
     "@remix-run/eslint-config": "^1.3.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5"
   },
   "engines": {
