--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix": "^1.3.1"
+    "remix": "^1.3.1",
+    "@remix-run/vercel": "^1.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.1",
